--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@
 #cityName {
     float: left;
 }
+
+.newDay {
+    background-color: blue;
+    color: white;
+    margin: 10px;
+    padding: 10px;
+}
