--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .jumbotron {
-    background-color: black;
+    background-color: rgb(44, 44, 44);
     color: white;
     text-align: center;
     padding: 15px;
