uv index displayed for selected city

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .jumbotron {
     background-color: rgb(44, 44, 44);
+    margin-bottom: 0px;
     color: white;
     text-align: center;
     padding: 15px;
